--- a/css/component-font.css
+++ b/css/component-font.css
@@ -1,9 +1,80 @@
 /* 
+component font regular
+ */
+.title-1-regular {
+   font-family: 'Satoshi-Regular';
+   font-size: 72px;
+   line-height: 96px;
+}
+
+.title-2-regular {
+   font-family: 'Satoshi-Regular';
+   font-size: 64px;
+   line-height: 84px;
+}
+
+.subtitle-3-regular {
+   font-size: 16px;
+   line-height: 24px;
+   font-family: 'Satoshi-Regular';
+}
+
+.subtitle-2-regular {
+   font-size: 20px;
+   font-family: 'Satoshi-Regular';
+   line-height: 28px;
+}
+
+.body-text-1-regular {
+   font-family: 'Satoshi-Regular';
+   font-size: 14px;
+   line-height: 20px;
+}
+
+/* end component regular */
+
+
+/* 
     component font medium
  */
+.title-2-medium {
+   font-size: 64px;
+   font-weight: 500;
+   line-height: 84px;
+}
 
- .title-2-medium {
-    font-size: 64px;
-    font-weight: 500;
-    line-height: 84px;
- }
+
+
+/* 
+   component font bold
+  */
+
+.heading-1-bold {
+   font-family: 'Satoshi-Bold';
+   font-size: 48px;
+   line-height: 64px;
+}
+
+.heading-3-bold {
+   font-family: 'Satoshi-Bold';
+   font-size: 32px;
+   line-height: 44px;
+}
+
+.title-2-bold {
+   font-family: 'Satoshi-Bold';
+   font-size: 64px;
+   line-height: 84px;
+}
+
+.subtitle-1-bold {
+   font-family: 'Satoshi-Bold';
+   font-size: 24px;
+   line-height: 32px;
+}
+
+.subtitle-2-bold {
+   font-family: 'Satoshi-Bold';
+   font-size: 20px;
+   line-height: 28px;
+}
