--- a/css/component-button.css
+++ b/css/component-button.css
@@ -1,48 +1,83 @@
 /* 
-    component button primary icon text
+    component button icon text
  */
 
- .btn-primary-icon-text {
+/* btn icon text primary */
+.btn-icon-text-primary {
     font-size: 14px;
     font-weight: 500;
     line-height: 20px;
-    padding: 6px 16px 6px 16px;
+    padding: 6px 16px;
     background-color: #2E3192;
- }
+}
 
- .btn-primary-icon-text:hover {
+.btn-icon-text-primary:hover {
     background-color: #3334CC;
- }
+}
 
- .btn-primary-icon-text:focus {
+.btn-icon-text-primary:focus {
     background-color: #3334CC;
     outline: #4C4DDC33;
     opacity: 0.2;
- }
+}
 
- /* 
-    component button primary only text
+/* btn end icon text primary */
+
+/* btn icon text primary */
+.btn-icon-text {
+    font-weight: 500;
+    font-size: 16px;
+    text-align: center;
+    padding: 6px 16px;
+    background-color: white;
+    height: 40px;
+}
+
+.btn-icon-text:hover {
+    font-weight: 500;
+    font-size: 16px;
+    text-align: center;
+    padding: 6px 16px;
+    background-color: white;
+    color: #3334CC;
+}
+
+.btn-icon-text:focus {
+    background-color: #3334CC;
+    outline: #4C4DDC33;
+    color: white;
+}
+
+/* btn icon text primary */
+
+
+
+
+
+
+/* 
+    component button only text
 */
 
-.btn-primary-text {
+.btn-primary-text-only {
     background-color: #2E3192;
     border-radius: 6px;
     border: none;
     color: #ffff;
     padding: 6px 16px;
     gap: 4px;
-    
+
 }
 
-.btn-primary-text:hover {
+.btn-primary-text-only:hover {
     background-color: #3334CC;
     color: white;
 }
 
-.btn-primary-text:focus {
+.btn-primary-text-only:focus {
     box-shadow: 0 0 0 3px rgba(76, 77, 220, 0.2);
 }
 
-.btn-primary-text-pressed {
+.btn-primary-text-only-pressed {
     background-color: rgba(33, 33, 122, 1);
 }
