--- a/css/component-font.css
+++ b/css/component-font.css
@@ -19,6 +19,12 @@ component font regular
    font-family: 'Satoshi-Regular';
 }
 
+.subtitle-1-regular {
+   font-size: 24px;
+   font-family: 'Satoshi-Regular';
+   line-height: 32px;
+}
+
 .subtitle-2-regular {
    font-size: 20px;
    font-family: 'Satoshi-Regular';
@@ -29,6 +35,12 @@ component font regular
    font-family: 'Satoshi-Regular';
    font-size: 14px;
    line-height: 20px;
+}
+
+.futura-bkt-bt {
+   font-family: 'Futura Bk BT Book';
+   font-size: 16px;
+   line-height: 19px;
 }
 
 /* end component regular */
@@ -78,3 +90,11 @@ component font regular
    font-size: 20px;
    line-height: 28px;
 }
+
+.subtitle-3-bold {
+   font-family: 'Satoshi-Bold';
+   font-size: 16px;
+   line-height: 22px;
+}
+
+
