--- a/css/component-icon.css
+++ b/css/component-icon.css
@@ -30,3 +30,25 @@
     background-image: url(../assets/img/arrow-narrow-right.png);
     vertical-align: middle;
 }
+
+.chevron-left {
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    background-repeat: no-repeat;
+    background-size: contain;
+    margin-right: 0.5em;
+    background-image: url(../assets/img/cheveron-left.png);
+    vertical-align: middle;
+}
+
+.chevron-right {
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    background-repeat: no-repeat;
+    background-size: contain;
+    margin-right: 0.5em;
+    background-image: url(../assets/img/cheveron-right.png);
+    vertical-align: middle;
+}
