--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,43 @@ a {
     margin: 0px;
 }
 
+.radius-on-cta {
+    border-radius: 20px;
+}
+
+.rectangle-footer {
+    width: 100%;
+    height: 8px;
+    background-color: #2E3192;
+}
+
+.testimoni {
+    padding: 42px 24px;
+}
+
+.footer-nextg {
+    margin-top: 32px;
+    margin-bottom: 32px;
+}
+
+.testimoni-spacer {
+    padding-bottom: 56px;
+    padding-top: 56px;
+    padding-right: 161px;
+    
+}
+
+.divider-footer {
+    height: 2px;
+    background: linear-gradient(
+      270deg,
+      rgba(192, 204, 218, 0.1) 0%,
+      rgba(192, 204, 218, 0.6) 55.73%,
+      rgba(192, 204, 218, 0.1) 100%
+    );
+}
+
+
 @media only screen and (max-width: 600px) {
     .element-1 {
         top: 24.2%;
