--- a/public/css/component-spacer.css
+++ b/public/css/component-spacer.css
@@ -30,6 +30,14 @@
     margin-top: 56px;
 }
 
+.margin-bottom-200 {
+    margin-bottom: 200px;
+}
+
+.margin-bottom-80 {
+    padding-bottom: 80px;
+}
+
 .margin-bottom-56 {
     padding-bottom: 56px;
 }
