--- a/public/css/style.css
+++ b/public/css/style.css
@@ -25,7 +25,7 @@ a {
 }
 
 body {
-    background-image:url("../assets/img/bg-blur.png");
+    background-image: url("../assets/img/bg-blur.png");
     background-size: cover;
     height: 905px;
     background-repeat: no-repeat;
@@ -61,7 +61,7 @@ body {
 
 }
 
-.divider-footer {
+.divider {
     height: 2px;
     background: linear-gradient(270deg,
             rgba(192, 204, 218, 0.1) 0%,
@@ -82,16 +82,27 @@ body {
     border-radius: 20px;
 }
 
-.content-services > div {
+.content-services>div {
     /* padding: 56px 0px; */
     padding-top: 56px;
     padding-bottom: 56px;
     padding-right: 85px;
 }
 
-.content-services div + div {
+.content-services div+div {
     border-end-end-radius: 20px;
     border-start-end-radius: 20px;
+}
+
+.about-hero-text {
+    position: relative;
+    z-index: 2;
+}
+
+.about-hero-img {
+    position: absolute;
+    top: 350px;
+    z-index: 1;
 }
 
 
