--- a/public/css/component-font.css
+++ b/public/css/component-font.css
@@ -116,3 +116,11 @@ component font regular
    font-size: 16px;
    line-height: 22px;
 }
+
+/*component font button contact us*/
+.contact-us-font {
+   font-family: 'Satoshi-Medium';
+   font-style: normal;
+   font-size: 16px;
+   line-height: 24px;
+}
