--- a/public/css/component-icon.css
+++ b/public/css/component-icon.css
@@ -31,6 +31,16 @@
     vertical-align: middle;
 }
 
+.arrow-up {
+    display: inline-block;
+    width: 16px;
+    height: 16px;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-image: url(../assets/img/arrow-narrow-up.png);
+    vertical-align: middle;
+}
+
 .chevron-left {
     display: inline-block;
     width: 20px;
