--- a/public/css/component-button.css
+++ b/public/css/component-button.css
@@ -21,6 +21,21 @@
     opacity: 0.2;
 }
 
+/* btn text only */
+/*.btn-text-only-outlined {*/
+/*    font-weight: 500;*/
+/*    font-size: 16px;*/
+/*    line-height: 24px;*/
+
+/*    padding: 8px 16px;*/
+/*    border: 1px solid #2E3192;*/
+/*    !* Shadow 1 *!*/
+
+/*    filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.12));*/
+/*    border-radius: 6px;*/
+/*}*/
+/* end btn text only */
+
 .btn-icon-chevron:hover {
     background-color: rgb(218, 211, 211);
 }
@@ -91,6 +106,7 @@
 }
 
 .btn-primary-text-only-outlined-blue-pigment-main {
+    background-color: transparent;
     border: 1px solid #2E3192;
     /* Shadow 1 */
     width: 200px;
